--- a/carstore/src/main/resources/i18n/messages_bg.properties
+++ b/carstore/src/main/resources/i18n/messages_bg.properties
@@ -5,6 +5,8 @@ navbar_all_brands = Всички марки
 navbar_all_offers = Всички обяви
 navbar_add_offer = Добави обява
 navbar_search = Търсене
+navbar_admin = Админ
+navbar_moderator = Модератор
 
 registration_subject = Добре дошли!
 registration_welcome = Добре дошли в CarStore
