--- a/carstore/src/main/resources/i18n/messages.properties
+++ b/carstore/src/main/resources/i18n/messages.properties
@@ -5,6 +5,8 @@ navbar_all_brands = All brands
 navbar_all_offers = All offers
 navbar_add_offer = Add Offer
 navbar_search = Search
+navbar_admin = Admin
+navbar_moderator = Moderator
 
 registration_subject = Welcome!
 registration_welcome = Welcome to CarStore
