--- a/carstore/src/main/resources/i18n/messages.properties
+++ b/carstore/src/main/resources/i18n/messages.properties
@@ -13,3 +13,17 @@ registration_welcome = Welcome to CarStore
 registration_user = Dear {0}!
 registration_congratulate = We are happy that you are part of our community now!
 registration_regards = Best regards CarStore!
+
+
+forgot_password_instruction = Copy the randomly generated password and paste it in the specified place in the link!
+forgot_password_mail = Please click the link below to verify your new password:
+registration_thanks = Thank you,
+registration_group = CarStore
+
+
+verify_fail=Sorry, we could not verify account. It maybe already verified,or verification code is incorrect.
+verify_success_congratulation=Congratulations, your account has been verified.
+verify_success_login=Click here to Login
+
+
+verify_account=We have sent to your email address, verification link. Please click the link to activate your account.
