--- a/carstore/src/main/resources/i18n/messages_bg.properties
+++ b/carstore/src/main/resources/i18n/messages_bg.properties
@@ -13,3 +13,16 @@ registration_welcome = Добре дошли в CarStore
 registration_user = Уважаеми {0}!
 registration_congratulate = Радваме се, че вече сте част от нас!
 registration_regards = С най-добри пожелания, екипът на CarStore!
+
+
+forgot_password_instruction = Копирайте случайно генерираната парола, и я поставете на зададеното място в линка!
+forgot_password_mail = Моля, щракнете върху връзката по-долу, за да потвърдите новата си парола:
+registration_thanks = Благодарим ви,
+registration_group = екипа на CarStore
+
+verify_fail=За съжаление не можахме да потвърдим акаунта. Може вече да е потвърдено или кодът за потвърждение е неправилен.
+verify_success_congratulation=Поздравления, вашият акаунт е потвърден.
+verify_success_login=Кликнете тук, за да влезете.
+
+
+verify_account=Изпратихме на вашия имейл адрес, връзка за потвърждение. Моля щракнете върху връзката, за да активирате акаунта си.
